--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/thinline.css">
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         <link rel="stylesheet" href="assets/css/style.css"/>
+        <link rel="shortcut icon" href="assets/imagenes/html.png"/>
         <link rel="stylesheet" href="assets/css/swiper-bundle.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     </head>
     <body>
-        <header class="header" id="header">
+        <header class="header" id="header">           
             <nav class="nav container">
                 <a href="#" class="nav__logo">Joseph</a>
                 <div class="nav__menu" id="nav-menu">
@@ -119,7 +120,7 @@ and open the template in the editor.
                 <div class="about__container container grid">
                     <img class="about__img" src="assets/imagenes/ima2.png" alt=""/>
                     <div class="about__data">
-                        <p class="about__description">Me considero una persona de carácter introvertido, a pesar de ser una persona tranquila, me gustar proyectar alegría y buena vibra, disfruto de la compañía de mis seres queridos y los buenos momentos en compañía de los amigos. Referente al ambiente laboral, me gusta ser una persona colaborativa, valoro mucho el trabajo en equipo y me motiva el aprendizaje diferido que se puede dar en diferentes áreas laborales, me gusta demostrar en mi trabajo los valores aprendidos en mi hogar como en las instituciones educativas por las que he cursado, demostrando respeto, honradez, amabilidad y empatía. Me gusta formar parte de grupos en los que se pueda explotar la iniciativa, creatividad y audacia para llevar a cabo proyectos, en mi experiencia laboral he trabajado en lugares bajo presión y me respeto el cumplimiento de metas y objetivos.</p>
+                        <p class="about__description">Soy una persona de carácter introvertido, a pesar de ser una persona tranquila, me gustar proyectar alegría y buena vibra, disfruto de la compañía de mis seres queridos y los buenos momentos en compañía de los amigos. Referente al ambiente laboral, me gusta ser una persona colaborativa, valoro mucho el trabajo en equipo y me motiva el aprendizaje diferido que se puede dar en diferentes áreas laborales, me gusta demostrar en mi trabajo los valores aprendidos en mi hogar como en las instituciones educativas por las que he cursado, demostrando respeto, honradez, amabilidad y empatía. Me gusta formar parte de grupos en los que se pueda explotar la iniciativa, creatividad y audacia para llevar a cabo proyectos, en mi experiencia laboral he trabajado en lugares bajo presión y me respeto el cumplimiento de metas y objetivos.</p>
 
                         <div class="about__info">
                             <div>
