--- a/index.html
+++ b/index.html
@@ -299,6 +299,73 @@ and open the template in the editor.
                             </div>
                         </div>
                     </div>
+                    <!--skills 4-->
+                    <div>
+                        <div class="skills__content skills__close">
+                            <div class="skills__header">
+                                <i class="uil uil-setting skills__icon"></i>
+                                <div>
+                                    <h1 class="skills__title">Others</h1>
+                                    <span class="skills__subtitle">Mas de 4 años</span>
+
+                                </div>
+                                <i class="uil uil-angle-down skills__arrow"></i>
+                            </div>
+                            <div class="skills__list grid">
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Json</h3>
+                                        <span class="skills__number">75%</span>
+
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__json"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Ajax</h3>
+                                        <span class="skills__number">65%</span>
+
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__ajax"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Excel</h3>
+                                        <span class="skills__number">95%</span>
+
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__excel"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Power BI</h3>
+                                        <span class="skills__number">85%</span>
+
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__poerBI"></span>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">SAP</h3>
+                                        <span class="skills__number">40%</span>
+
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percentage skills__sap"></span>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -507,7 +574,7 @@ and open the template in the editor.
                                 <p class="portfolio__descripcion">
                                     Desarrollo web de plataforma estilo mesa de ayuda para gestionar reclamos de productos no enviados o vencidos a proveedores, módulos a nivel cliente, usuario y gerente. 
                                 </p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                <a href="https://github.com/jjbalvarez/Others" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -520,7 +587,7 @@ and open the template in the editor.
                                 <p class="portfolio__descripcion">
                                     Portafolio de presentación personal, diseño responsivo y amigable para presentar información pertinente a una persona.
                                 </p>
-                                <a target="blank" href="https://jjbalvarez.github.io/portafolio/" class="button button--flex button--small portfolio__button">
+                                <a target="blank" href="https://jjbalvarez.github.io/modernEcommerce/" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -595,6 +662,26 @@ and open the template in the editor.
                                 </div>
                             </div>
                             <p class="testimonial__description">Es una buena persona y un profesional, lo conozco de toda la vida y se que tiene buenos valores, como profesional le gusta dar todo de si mismo y cumplir con sus metas, siempre esta buscando nuevos conocimientos y aprender de todo lo que pueda.</p>
+                        </div>
+                        
+                        <div class="testimonial__content">
+                            <div class="testimonial__data">
+                                <div class="testimonial__header">
+                                    <img src="assets/imagenes/t-ima5.png" alt="" class="testimonial__img"/>
+                                    <div>
+                                        <h3 class="testimonial__name">Jaime Alejandro Dulcey</h3>
+                                        <span class="testimonial__profe">Ingeniero</span>
+                                    </div>
+                                </div>
+                                <div>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                    <i class="uil uil-star testimonial__icon-star"></i>
+                                </div>
+                            </div>
+                            <p class="testimonial__description">Es una persona capacitada, comprometida y muy honesta, personalmente lo conozco desde siempre y es un buen elemento para incluir en cualquier sea el proyecto, personalmente le tengo mucha confianza y lo recomiendo ya que considero que cuenta con muchas cualidades y buenos principios.</p>
                         </div>
                     </div>
                 </div>
