--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ and open the template in the editor.
         <meta property="og:title" content="Portafolio Joseph">
         <meta property="og:type" content="Article">
         <meta property="og:url" content="https://jjbalvarez.github.io/portafolio/">
-        <meta property="og:image" content="assets/css/ima2.jpeg">
+        <meta property="og:image" content="assets/imagenes/ima2.jpeg">
         <meta property="og:description" content="Portafolio descriptive de Joseph Jassir Bustillo Alvarez, para conocer mas acerca de su persona, estudios, habilidades y referencias.">
         
         
