--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
         <meta property="og:type" content="Article">
         <meta property="og:url" content="https://jjbalvarez.github.io/portafolio/">
         <meta property="og:image" content="assets/imagenes/ima2.jpeg">
-        <meta property="og:description" content="Portafolio descriptive de Joseph Jassir Bustillo Alvarez, para conocer mas acerca de su persona, estudios, habilidades y referencias.">
+        <meta property="og:description" content="Portafolio descriptivo de Joseph Jassir Bustillo Alvarez, para conocer mas acerca de su persona, estudios, habilidades y referencias.">
         
         
 
